<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    <include-->
    <!--        android:id="@+id/toolbar"-->
    <!--        layout="@layout/toolbar" />-->


    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6pt"
        android:text="@string/txt_information"
        android:textSize="30sp"
        android:background="@color/material_dynamic_neutral40"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_get_detail"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/Btn_get_detail"
        android:textColor="#039BE5"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/no_information_provided_yet"
        android:textSize="20sp"/>

</LinearLayout>